--- a/vnc.html
+++ b/vnc.html
@@ -81,34 +81,16 @@
     <div id="noVNC_control_bar_anchor" class="noVNC_vcenter">
 
         <div id="noVNC_control_bar">
-            <div id="noVNC_control_bar_handle" title="Hide/Show the control bar"><div></div></div>
+            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
+            <div id="noVNC_control_bar_handle" title="Hide/Show the control bar">
+            </div>
 
             <div class="noVNC_scroll">
-
-            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
 
             <!-- Drag/Pan the viewport -->
             <input type="image" alt="Drag" src="app/images/drag.svg"
                 id="noVNC_view_drag_button" class="noVNC_button noVNC_hidden"
                 title="Move/Drag Viewport">
-
-            <!--noVNC Touch Device only buttons-->
-            <div id="noVNC_mobile_buttons">
-                <input type="image" alt="No mousebutton" src="app/images/mouse_none.svg"
-                    id="noVNC_mouse_button0" class="noVNC_button"
-                    title="Active Mouse Button">
-                <input type="image" alt="Left mousebutton" src="app/images/mouse_left.svg"
-                    id="noVNC_mouse_button1" class="noVNC_button"
-                    title="Active Mouse Button">
-                <input type="image" alt="Middle mousebutton" src="app/images/mouse_middle.svg"
-                    id="noVNC_mouse_button2" class="noVNC_button"
-                    title="Active Mouse Button">
-                <input type="image" alt="Right mousebutton" src="app/images/mouse_right.svg"
-                    id="noVNC_mouse_button4" class="noVNC_button"
-                    title="Active Mouse Button">
-                <input type="image" alt="Keyboard" src="app/images/keyboard.svg"
-                    id="noVNC_keyboard_button" class="noVNC_button" title="Show Keyboard">
-            </div>
 
             <!-- Extra manual keys -->
             <input type="image" alt="Extra keys" src="app/images/toggleextrakeys.svg"
@@ -116,6 +98,25 @@
                 title="Show Extra Keys">
             <div class="noVNC_vcenter">
             <div id="noVNC_modifiers" class="noVNC_panel">
+
+                <!--noVNC Touch Device only buttons-->
+                <div id="noVNC_mobile_buttons">
+                    <input type="image" alt="No mousebutton" src="app/images/mouse_none.svg"
+                        id="noVNC_mouse_button0" class="noVNC_button"
+                        title="Active Mouse Button">
+                    <input type="image" alt="Left mousebutton" src="app/images/mouse_left.svg"
+                        id="noVNC_mouse_button1" class="noVNC_button"
+                        title="Active Mouse Button">
+                    <input type="image" alt="Middle mousebutton" src="app/images/mouse_middle.svg"
+                        id="noVNC_mouse_button2" class="noVNC_button"
+                        title="Active Mouse Button">
+                    <input type="image" alt="Right mousebutton" src="app/images/mouse_right.svg"
+                        id="noVNC_mouse_button4" class="noVNC_button"
+                        title="Active Mouse Button">
+                    <input type="image" alt="Keyboard" src="app/images/keyboard.svg"
+                        id="noVNC_keyboard_button" class="noVNC_button" title="Show Keyboard">
+                </div>
+
                 <input type="image" alt="Ctrl" src="app/images/ctrl.svg"
                     id="noVNC_toggle_ctrl_button" class="noVNC_button"
                     title="Toggle Ctrl">
