--- a/vnc.html
+++ b/vnc.html
@@ -81,7 +81,7 @@
     <div id="noVNC_control_bar_anchor" class="noVNC_vcenter">
 
         <div id="noVNC_control_bar">
-            <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1>
+            <!-- <h1 class="noVNC_logo" translate="no"><span>no</span><br>VNC</h1> -->
             <div id="noVNC_control_bar_handle" title="Hide/Show the control bar">
             </div>
 
