--- a/vnc.html
+++ b/vnc.html
@@ -14,6 +14,18 @@
         http://example.com/#host=HOST&port=PORT&encrypt=1
     -->
     <title>noVNC</title>
+    <script type="text/javascript" src="/static/jsmpeg/jsmpeg.min.js"></script>
+    <canvas id="video-canvas" style="width: 0;height: 0;position: fixed"></canvas>
+    <script>
+        var canvas = document.getElementById('video-canvas');
+        var protocol = window.location.protocol === 'https:' ? 'wss' : 'ws'
+        var url = protocol + '://' + window.location.hostname + ":" + window.location.port + '/audio';
+        var player = new JSMpeg.Player(url, {
+            canvas: canvas, audioBufferSize: 512 * 1024,
+            autoplay: true, pauseWhenHidden: false,
+        });
+        player.audioOut.unlock(function () {});
+    </script>
 
     <meta charset="utf-8">
     
@@ -337,25 +349,6 @@
         <source src="app/sounds/bell.oga" type="audio/ogg">
         <source src="app/sounds/bell.mp3" type="audio/mpeg">
     </audio>
-    <script type="text/javascript" src="/static/jsmpeg/jsmpeg.min.js"></script>
-    <script>
-        var canvas = document.getElementById('video-canvas');
-        var protocol = window.location.protocol === 'https:' ? 'wss' : 'ws'
-        var url = protocol + '://' + window.location.hostname + ":" + window.location.port + '/audio';
-        var player = new JSMpeg.Player(url, {
-            canvas: canvas, audioBufferSize: 512 * 1024,
-            autoplay: true, pauseWhenHidden: false,
-        });
-        let isInit = false;
-        document.addEventListener('touchstart', function () {
-            if (isInit) {
-                return
-            }
-            isInit = true;
-            player.audioOut.unlock(function () {
-            });
-        });
-    </script>
  </body>
 </html>
 
