--- a/vnc.html
+++ b/vnc.html
@@ -159,7 +159,7 @@
                 <div class="noVNC_heading">
                     <img alt="" src="app/images/translator.svg"> Translator
                 </div>
-                <textarea id="noVNC_clipboard_text" rows=30></textarea>
+                <textarea id="noVNC_translator_text" rows=30></textarea>
                 <br>
                 <input id="noVNC_clipboard_clear_button" type="button"
                     value="Clear" class="noVNC_submit">
