--- a/vnc.html
+++ b/vnc.html
@@ -156,13 +156,10 @@
                 title="Show Translator">
             <div class="noVNC_vcenter">
             <div id="noVNC_translator" class="noVNC_panel">
-                <div class="noVNC_heading">
-                    <img alt="" src="app/images/translator.svg"> Translator
-                </div>
-                <textarea id="noVNC_translator_text" rows=30></textarea>
-                <br>
-                <input id="noVNC_clipboard_clear_button" type="button"
-                    value="Clear" class="noVNC_submit">
+                <!-- <div class="noVNC_heading"> -->
+                <!--     <img alt="" src="app/images/translator.svg"> Translator -->
+                <!-- </div> -->
+                <div id="noVNC_translator_text"></div>
             </div>
             </div>
 
