--- a/vnc.html
+++ b/vnc.html
@@ -159,7 +159,8 @@
                 <!-- <div class="noVNC_heading"> -->
                 <!--     <img alt="" src="app/images/translator.svg"> Translator -->
                 <!-- </div> -->
-                <div id="noVNC_translator_text"></div>
+                <div id="noVNC_translator_raw_text"></div>
+                <div id="noVNC_translator_translated_text"></div>
             </div>
             </div>
 
