--- a/vnc.html
+++ b/vnc.html
@@ -76,6 +76,7 @@
     <script nomodule src="vendor/browser-es-module-loader/dist/browser-es-module-loader.js"></script>
     <!-- actual script modules -->
     <script type="module" crossorigin="anonymous" src="app/ui.js"></script>
+    <script src="dist/gpu-browser.min.js"></script>
     <!-- end scripts -->
 </head>
 
