--- a/vnc.html
+++ b/vnc.html
@@ -162,6 +162,10 @@
                     </li>
                     <li><hr></li>
                     <li>
+                        <label><input id="noVNC_setting_audio" type="checkbox"> Enable Audio</label>
+                    </li>
+                    <li><hr></li>
+                    <li>
                         <label><input id="noVNC_setting_view_clip" type="checkbox"> Clip to Window</label>
                     </li>
                     <li>
